--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Count</th>\n      <th>Percentage of Players</th>\n    </tr>\n    <tr>\n      <th>Age Range</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>&lt;10</th>\n      <td>23</td>\n      <td>2.98%</td>\n    </tr>\n    <tr>\n      <th>10-14</th>\n      <td>28</td>\n      <td>3.62%</td>\n    </tr>\n    <tr>\n      <th>15-19</th>\n      <td>136</td>\n      <td>17.59%</td>\n    </tr>\n    <tr>\n      <th>20-24</th>\n      <td>365</td>\n      <td>47.22%</td>\n    </tr>\n    <tr>\n      <th>25-29</th>\n      <td>101</td>\n      <td>13.07%</td>\n    </tr>\n    <tr>\n      <th>30-34</th>\n      <td>73</td>\n      <td>9.44%</td>\n    </tr>\n    <tr>\n      <th>35-39</th>\n      <td>41</td>\n      <td>5.30%</td>\n    </tr>\n    <tr>\n      <th>40+</th>\n      <td>6</td>\n      <td>0.78%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 129
+     "execution_count": 130
     }
    ],
    "source": [
@@ -488,134 +488,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$77.13</td>\n",
-       "      <td>$4.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>28</td>\n",
-       "      <td>$2.96</td>\n",
-       "      <td>$82.78</td>\n",
-       "      <td>$3.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>136</td>\n",
-       "      <td>$3.04</td>\n",
-       "      <td>$412.89</td>\n",
-       "      <td>$3.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>365</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>$1,114.06</td>\n",
-       "      <td>$4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>101</td>\n",
-       "      <td>$2.90</td>\n",
-       "      <td>$293.00</td>\n",
-       "      <td>$3.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>73</td>\n",
-       "      <td>$2.93</td>\n",
-       "      <td>$214.00</td>\n",
-       "      <td>$4.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>41</td>\n",
-       "      <td>$3.60</td>\n",
-       "      <td>$147.67</td>\n",
-       "      <td>$4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$2.94</td>\n",
-       "      <td>$38.24</td>\n",
-       "      <td>$3.19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "Age Ranges                                                              \n",
-       "<10                    23                  $3.35               $77.13   \n",
-       "10-14                  28                  $2.96               $82.78   \n",
-       "15-19                 136                  $3.04              $412.89   \n",
-       "20-24                 365                  $3.05            $1,114.06   \n",
-       "25-29                 101                  $2.90              $293.00   \n",
-       "30-34                  73                  $2.93              $214.00   \n",
-       "35-39                  41                  $3.60              $147.67   \n",
-       "40+                    13                  $2.94               $38.24   \n",
-       "\n",
-       "           Avg Total Purchase per Person  \n",
-       "Age Ranges                                \n",
-       "<10                                $4.54  \n",
-       "10-14                              $3.76  \n",
-       "15-19                              $3.86  \n",
-       "20-24                              $4.32  \n",
-       "25-29                              $3.81  \n",
-       "30-34                              $4.12  \n",
-       "35-39                              $4.76  \n",
-       "40+                                $3.19  "
-      ]
+       "          Total Purchase Value  Purchase Count Average Purchase Price\n",
+       "Age Range                                                            \n",
+       "<10                     $77.13              23                  $3.35\n",
+       "10-14                   $82.78              28                  $2.96\n",
+       "15-19                  $412.89             136                  $3.04\n",
+       "20-24                 $1114.06             365                  $3.05\n",
+       "25-29                  $293.00             101                  $2.90\n",
+       "30-34                  $214.00              73                  $2.93\n",
+       "35-39                  $147.67              41                  $3.60\n",
+       "40+                     $16.71               6                  $2.78"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Purchase Value</th>\n      <th>Purchase Count</th>\n      <th>Average Purchase Price</th>\n    </tr>\n    <tr>\n      <th>Age Range</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>&lt;10</th>\n      <td>$77.13</td>\n      <td>23</td>\n      <td>$3.35</td>\n    </tr>\n    <tr>\n      <th>10-14</th>\n      <td>$82.78</td>\n      <td>28</td>\n      <td>$2.96</td>\n    </tr>\n    <tr>\n      <th>15-19</th>\n      <td>$412.89</td>\n      <td>136</td>\n      <td>$3.04</td>\n    </tr>\n    <tr>\n      <th>20-24</th>\n      <td>$1114.06</td>\n      <td>365</td>\n      <td>$3.05</td>\n    </tr>\n    <tr>\n      <th>25-29</th>\n      <td>$293.00</td>\n      <td>101</td>\n      <td>$2.90</td>\n    </tr>\n    <tr>\n      <th>30-34</th>\n      <td>$214.00</td>\n      <td>73</td>\n      <td>$2.93</td>\n    </tr>\n    <tr>\n      <th>35-39</th>\n      <td>$147.67</td>\n      <td>41</td>\n      <td>$3.60</td>\n    </tr>\n    <tr>\n      <th>40+</th>\n      <td>$16.71</td>\n      <td>6</td>\n      <td>$2.78</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 137
     }
    ],
-   "source": []
+   "source": [
+    "arp_df = purchase_df[['Age Range','Price']].groupby('Age Range').sum()\n",
+    "arp_df['Purchase Count'] = purchase_df.groupby('Age Range').size()\n",
+    "arp_df = arp_df.rename(columns={'Price':'Total Purchase Value'})\n",
+    "arp_df['Average Purchase Price'] = round(arp_df['Total Purchase Value'] / arp_df['Purchase Count'],2)\n",
+    "arp_df['Average Purchase Price'] = arp_df['Average Purchase Price'].map(\"${:.2f}\".format)\n",
+    "arp_df['Total Purchase Value'] = arp_df['Total Purchase Value'].map(\"${:.2f}\".format)\n",
+    "arp_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -646,92 +551,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SN</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Lisosia93</th>\n",
-       "      <td>5</td>\n",
-       "      <td>$3.79</td>\n",
-       "      <td>$18.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Idastidru52</th>\n",
-       "      <td>4</td>\n",
-       "      <td>$3.86</td>\n",
-       "      <td>$15.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chamjask73</th>\n",
-       "      <td>3</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$13.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Iral74</th>\n",
-       "      <td>4</td>\n",
-       "      <td>$3.40</td>\n",
-       "      <td>$13.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Iskadarya95</th>\n",
-       "      <td>3</td>\n",
-       "      <td>$4.37</td>\n",
-       "      <td>$13.10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "             Purchase Count Average Purchase Price Total Purchase Value\n",
        "SN                                                                     \n",
        "Lisosia93                 5                  $3.79               $18.96\n",
-       "Idastidru52               4                  $3.86               $15.45\n",
-       "Chamjask73                3                  $4.61               $13.83\n",
        "Iral74                    4                  $3.40               $13.62\n",
-       "Iskadarya95               3                  $4.37               $13.10"
-      ]
+       "Idastidru52               4                  $3.86               $15.45\n",
+       "Asur53                    3                  $2.48                $7.44\n",
+       "Inguron55                 3                  $3.70               $11.11"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Purchase Count</th>\n      <th>Average Purchase Price</th>\n      <th>Total Purchase Value</th>\n    </tr>\n    <tr>\n      <th>SN</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Lisosia93</th>\n      <td>5</td>\n      <td>$3.79</td>\n      <td>$18.96</td>\n    </tr>\n    <tr>\n      <th>Iral74</th>\n      <td>4</td>\n      <td>$3.40</td>\n      <td>$13.62</td>\n    </tr>\n    <tr>\n      <th>Idastidru52</th>\n      <td>4</td>\n      <td>$3.86</td>\n      <td>$15.45</td>\n    </tr>\n    <tr>\n      <th>Asur53</th>\n      <td>3</td>\n      <td>$2.48</td>\n      <td>$7.44</td>\n    </tr>\n    <tr>\n      <th>Inguron55</th>\n      <td>3</td>\n      <td>$3.70</td>\n      <td>$11.11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 149
     }
    ],
-   "source": []
+   "source": [
+    "ts_df = purchase_df[['SN','Price']].groupby('SN').sum()\n",
+    "ts_df['Purchase Count'] = purchase_df.groupby('SN').size()\n",
+    "ts_df = ts_df.rename(columns={'Price':'Total Purchase Value'})\n",
+    "ts_df['Average Purchase Price'] = round(ts_df['Total Purchase Value'] / ts_df['Purchase Count'],2)\n",
+    "ts_df['Average Purchase Price'] = ts_df['Average Purchase Price'].map(\"${:.2f}\".format)\n",
+    "ts_df['Total Purchase Value'] = ts_df['Total Purchase Value'].map(\"${:.2f}\".format)\n",
+    "ts_df = ts_df.sort_values('Purchase Count',ascending=False)\n",
+    "ts_df = ts_df.reindex(columns=['Purchase Count','Average Purchase Price','Total Purchase Value'])\n",
+    "ts_df.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -761,6 +612,50 @@
     "\n",
     "* Display a preview of the summary data frame\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         Price\n",
+       "Item ID       \n",
+       "0         5.12\n",
+       "1        11.77\n",
+       "2        14.88\n",
+       "3        14.94\n",
+       "4         8.50\n",
+       "...        ...\n",
+       "178      50.76\n",
+       "179      26.88\n",
+       "181       8.30\n",
+       "182      12.09\n",
+       "183       3.27\n",
+       "\n",
+       "[179 rows x 1 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Price</th>\n    </tr>\n    <tr>\n      <th>Item ID</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.12</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11.77</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>14.88</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>14.94</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8.50</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>178</th>\n      <td>50.76</td>\n    </tr>\n    <tr>\n      <th>179</th>\n      <td>26.88</td>\n    </tr>\n    <tr>\n      <th>181</th>\n      <td>8.30</td>\n    </tr>\n    <tr>\n      <th>182</th>\n      <td>12.09</td>\n    </tr>\n    <tr>\n      <th>183</th>\n      <td>3.27</td>\n    </tr>\n  </tbody>\n</table>\n<p>179 rows × 1 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 153
+    }
+   ],
+   "source": [
+    "pi_df = purchase_df[['Item ID','Item Name','Price']].groupby('Item ID').sum()\n",
+    "pi_df\n",
+    "#pi_df['Purchase Count'] = purchase_df.groupby('Item ID').size()\n",
+    "#pi_df = pi_df.rename(columns={'Price':'Total Purchase Value'})\n",
+    "#pi_df['Average Purchase Price'] = round(pi_df['Total Purchase Value'] / pi_df['Purchase Count'],2)\n",
+    "#pi_df['Average Purchase Price'] = pi_df['Average Purchase Price'].map(\"${:.2f}\".format)\n",
+    "#pi_df['Total Purchase Value'] = pi_df['Total Purchase Value'].map(\"${:.2f}\".format)\n",
+    "#pi_df = pi_df.sort_values('Purchase Count',ascending=False)\n",
+    "#pi_df = pi_df.reindex(columns=['Purchase Count','Average Purchase Price','Total Purchase Value'])\n",
+    "#pi_df.head(10)"
    ]
   },
   {
@@ -873,7 +768,17 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "pi_df = purchase_df[['Item ID','Item Name','Price']].groupby('Item ID').sum()\n",
+    "pi_df['Purchase Count'] = purchase_df.groupby('Item ID').size()\n",
+    "pi_df = ts_df.rename(columns={'Price':'Total Purchase Value'})\n",
+    "pi_df['Average Purchase Price'] = round(ts_df['Total Purchase Value'] / ts_df['Purchase Count'],2)\n",
+    "pi_df['Average Purchase Price'] = ts_df['Average Purchase Price'].map(\"${:.2f}\".format)\n",
+    "pi_df['Total Purchase Value'] = ts_df['Total Purchase Value'].map(\"${:.2f}\".format)\n",
+    "pi_df = ts_df.sort_values('Purchase Count',ascending=False)\n",
+    "pi_df = ts_df.reindex(columns=['Purchase Count','Average Purchase Price','Total Purchase Value'])\n",
+    "pi_df.head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
